<?xml version="1.0" encoding="utf-8"?>
<resources>
   <string name="app_name">Sante</string>
    <string name="menu_settings">Photo Settings</string>
    <string name="action_settings">Settings</string>
    <string name="action_users">Gestion utilisateurs</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_adduser">Ajouter un utilisateur</string>
    <string name="my_health_data">Mes infos de santé</string>
    <string name="antecedents">Antécédents</string>
    <string name="treatments">Traitements</string>
    <string name="allergies">Allergies</string>
    <string name="vaccines">Vaccins</string>
    <string name="action_about">A propos</string>
    <string name="btnIntend">Take a picture</string>
    <string name="cannot">Cannot</string>
    <string name="album_name">MaSante</string>
    <string name="info_title">Infos de santé</string>
    <string name="add_info">Ajouter une information</string>
    <string name="login">Identifiant</string>
    <string name="password">Mot de passe</string>
    <string name="name">Nom</string>
    <string name="save">Enregistrer</string>
    <string name="cancel">Annuler</string>
    <string name="date">28/07/2013</string>
    <string name="userNameExample">Charlotte</string>
    <string name="select_user">Patient</string>
    <string name="allergy">allergie</string>
    <string name="treatment">traitement</string>
    <string name="vaccine">vaccin</string>
    <string name="antecedent">antécédent</string>
    <string name="add_treatment">Ajouter un traitement</string>
    <string name="add_antecedent">Ajouter un antécédent</string>
    <string name="add_vaccine">Ajouter un vaccin</string>
    <string name="add_allergy">Ajouter une allergie</string>
    <string name="document_title">Mes documents</string>
    <string name="crhospitalisation">C.R. Hospitalisation</string>
    <string name="examens">Examens Bio</string>
    <string name="radios">C.R. Radios</string>
    <string name="ordonnances">Ordonnances</string>
    <string name="remboursements">Remboursements</string>
    <string name="autres">Autres</string>

    <string name="action_capucine">Capucine</string>

    <string name="urgence_title">Urgence</string>
    <string name="timeline_title">Timeline</string>
    <string name="evolution_title">Mon évolution</string>
    <string name="memo_title">Mon mémo</string>
    <string name="capucine_title">Capucine</string>
    <string name="credits_html">
        <![CDATA[
        <p><center>
        <b>Idée Originale de :</b><br />
        Amaury Larreur<br />
        Liouma Tokitsu <br />
        <br />
        <b>Développement</b><br />
        Samuel Mantunes<br />
        Thanh<br />
        Jean Minouflet<br />
        Andrei Talantsy<br />
        Ilyess Zenasni<br />
        Amaury Larreur<br />
        <br />
        <b>Design</b><br />
        Yadira Guzman<br /><br />
        <b>Avec la participation de </b>
       <br/>
       Philippe Vacheyrout <br />
       Alex Delivet
       </center></p>
        ]]>
    </string>
    <string name="memo_html">
        <![CDATA[
        <p><center><br /><br />
        <b>RDV Dr Jean Pierre :</b><br />
        Le 36 du mois.<br />
        <br />
        <b>Pharmacie</b><br />
        Voir pour Dynamisant (sans ordonnance).<br />
        <br />
        <b>Acheter avant le 19 </b><br />
        1 boit de bionisant<br />

       </center></p>
        ]]>
    </string>
    <string name="documents_title">Mes documents</string>
    <string name="action_add_contact">Persone a contacter</string>
    <string name="list_allergies">
        <![CDATA[
                <u>Allergies</u><br/>
                <span>Kiwi</span><br/>
                <span>Acariens</span><br/>
                <span>Aspirine</span><br/>
                <span>Latex</span>
        ]]>
    </string>
    <string name="list_antecedents">
        <![CDATA[
                <u>Antecedents</u><br/>
                <span>Hypertension arterielle</span>
        ]]>
    </string>
</resources>
